libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__unclosed_struct.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Unclosed struct
expression: "(name: String, age: Int"
info:
  kind: Err
---
(name: String, age: Int
                       ^
