libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__unclosed_tuple.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Unclosed tuple
expression: "(Int, String"
info:
  kind: Err
---
(Int, String
    ^
